--- a/code/client/assets/index.html
+++ b/code/client/assets/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text;400,600|Work+Sans:400,700|Mulish:300,800&display=swap" rel="stylesheet">
     <title>ONE Wallet</title>
 </head>
 <body>
